--- a/.github/workflows/develop_flow.yaml
+++ b/.github/workflows/develop_flow.yaml
@@ -11,12 +11,12 @@ on:
 
 run-name: Deploy to Develop Databricks at destination ${{ inputs.destination }} by @${{ github.actor }}
 
-env:
-  # AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS_DEV }}
-  # AZURE_SP_APPLICATION_ID: ${{ secrets.ARM_CLIENT_ID }}
-  # AZURE_SP_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-  # AZURE_SP_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-  DATABRICKS_BUNDLE_ENV: develop
+# env:
+#   # AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS_DEV }}
+#   # AZURE_SP_APPLICATION_ID: ${{ secrets.ARM_CLIENT_ID }}
+#   # AZURE_SP_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+#   # AZURE_SP_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+#   DATABRICKS_BUNDLE_ENV: develop
 
 jobs:
   validate_deploy:
